fixed-overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-::-webkit-scrollbar {
-  width: 10px;
-}
-::-webkit-scrollbar-thumb {
-  background-color: #ae34ff;
-  border-radius: 40px;
-}
 * {
   margin: 0;
   padding: 0;
@@ -18,9 +11,11 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   color-scheme: dark;
-  /* color scheme means a dark mode like scroll and content everything */
+  /* color scheme means a dark mode  */
 }
-
+.bg-hero {
+  background-image: url("./assets/herobg.png");
+}
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
